--- a/PROGETTOS4L4/prova.html
+++ b/PROGETTOS4L4/prova.html
@@ -71,7 +71,7 @@
 
 
 
-    <script>
+ <--  <script>
         $(document).ready(function () {
             $.ajax({
                 url: "data/audio.json",
@@ -106,7 +106,7 @@
 
 
 
-    </script>
+    </script> -->
 
 </body>
 
